# meta-layer

./: .gitignore  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/adapters/: asana.ts  fileParser.ts  gemini.ts  slack.ts
src/components/: ErrorBoundary.tsx  TaskCard.tsx  UserProfileModal.tsx
src/types/: unified.ts
